--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Basic Web Page</title>
+    <title>money team placeholder</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
   <body>
-Hello World!
+    <a href="#" onclick="toggle_options( )">
+      <i class="fa-solid fa-backward-fast fa-fade" id="hamburger"></i>
+    </a>
+
+    <h2>money team placeholder</h2>
+
+    <div class="options">
+      <a href="#" onclick="toggle_options( )">
+        <i class="fa-solid fa-circle-xmark" id="hamburger_close"></i>
+      </a>
+      <br><br><br>
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">placeholder</a></li>
+        <li><a href="#">placeholder</a></li>
+        <li><a href="#">placeholder</a></li>
+      </ul>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
