--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   </head>
   <body>
     <a href="#" onclick="toggle_options( )">
-      <i class="fa-solid fa-backward-fast fa-fade" id="hamburger"></i>
+      <i class="fa-solid fa-backward-fast fa-fade fa-xl" id="hamburger"></i>
     </a>
 
     <h2>money team placeholder</h2>
 
     <div class="options">
       <a href="#" onclick="toggle_options( )">
-        <i class="fa-solid fa-circle-xmark" id="hamburger_close"></i>
+        <i class="fa-solid fa-circle-xmark fa-xl" id="hamburger_close"></i>
       </a>
       <br><br><br>
       <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">placeholder</a></li>
-        <li><a href="#">placeholder</a></li>
-        <li><a href="#">placeholder</a></li>
+        <li><a href="#">home</a></li><br>
+        <li><a href="#">service</a></li><br>
+        <li><a href="#">portfolio</a></li><br>
+        <li><a href="#">about us</a></li><br>
       </ul>
     </div>
 
