--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </a>
       <br><br><br>
       <ul>
-        <li><a href="#">home</a></li><br>
-        <li><a href="#">service</a></li><br>
-        <li><a href="#">portfolio</a></li><br>
-        <li><a href="#">about us</a></li><br>
+        <li class="hover_underline_anim"><a href="#">home</a></li><br><br>
+        <li class="hover_underline_anim"><a href="#">service</a></li><br><br>
+        <li class="hover_underline_anim"><a href="#">portfolio</a></li><br><br>
+        <li class="hover_underline_anim"><a href="#">about us</a></li><br><br>
       </ul>
     </div>
 
