--- a/service.html
+++ b/service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>money team main page</title>
+    <title>money team services</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
@@ -11,7 +11,29 @@
       <i class="fa-solid fa-backward-fast fa-fade fa-xl" id="hamburger"></i>
     </a>
 
-    <h2>money team main page</h2>
+    <h2>money team services</h2>
+    <table class="service">
+      <tr>
+        <th class="service_hover">
+          <i class="fa-solid fa-laptop-code fa-2xl service_icons"></i>
+          <p class="service_paragraph">development</p>
+        </th>
+        <th class="service_hover">
+          <i class="fa-solid fa-mobile-screen-button fa-2xl service_icons"></i>
+          <p class="service_paragraph">social media</p>
+        </th>
+      </tr>
+      <tr>
+        <th class="service_hover">
+          <i class="fa-solid fa-store fa-2xl service_icons"></i>
+          <p class="service_paragraph">marketing</p>
+        </th>
+        <th class="service_hover">
+          <i class="fa-solid fa-shield-halved fa-2xl service_icons"></i>
+          <p class="service_paragraph">cyber sec.</p>
+        </th>
+      </tr>
+    </table>
 
     <div class="options">
       <a href="#" onclick="toggle_options( )">
