--- a/service.html
+++ b/service.html
@@ -16,21 +16,21 @@
       <tr>
         <th class="service_hover">
           <i class="fa-solid fa-laptop-code fa-2xl service_icons"></i>
-          <p class="service_paragraph">development</p>
+          <p class="service_title">software</p>
         </th>
         <th class="service_hover">
           <i class="fa-solid fa-mobile-screen-button fa-2xl service_icons"></i>
-          <p class="service_paragraph">social media</p>
+          <p class="service_title">social</p>
         </th>
       </tr>
       <tr>
         <th class="service_hover">
           <i class="fa-solid fa-store fa-2xl service_icons"></i>
-          <p class="service_paragraph">marketing</p>
+          <p class="service_title">marketing</p>
         </th>
         <th class="service_hover">
           <i class="fa-solid fa-shield-halved fa-2xl service_icons"></i>
-          <p class="service_paragraph">cyber sec.</p>
+          <p class="service_title">cyber sec.</p>
         </th>
       </tr>
     </table>
