--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
 
     <!-- header section ( logo ? )-->
-    <h2>money team main page</h2>
-    <!-- mission statement -->
+    <h2 class="brand_name">money team</h2>
+    <p class="mission_statement">
+Leveraging disruptive technology to create digital growth and personalized IT solutions for your various business needs
+    </p>
     <!-- description-->
 
     <h2 class="service_header" id="service_jump">services</h2>
