--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>money team main page</title>
+    <title>*placeholder* main page</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- implement smooth scrolling cuz wtf is that ugly ahh jump -->
-    <a href="#" onclick="toggle_options( )" id="home_jump">
+    <a href="javascript:void(0)" onclick="toggle_options( )" id="home_jump">
       <i class="fa-solid fa-backward-fast fa-fade fa-xl" id="hamburger"></i>
     </a>
     <div class="options">
-      <a href="#" onclick="toggle_options( )">
+      <a href="javascript:void(0)" onclick="toggle_options( )">
         <i class="fa-solid fa-circle-xmark fa-xl" id="hamburger_close"></i>
       </a>
       <br><br><br>
@@ -24,7 +24,7 @@
     </div>
 
     <!-- header section ( logo ? )-->
-    <h2 class="brand_name">money team</h2>
+    <h2 class="brand_name">*placeholder*</h2>
     <p class="mission_statement">
 Leveraging disruptive technology to create digital growth and personalized IT solutions for your various business needs
     </p>
@@ -60,8 +60,8 @@ Leveraging disruptive technology to create digital growth and personalized IT so
       <h2 class="hidden_txt">cyber sec. header</h2><p class="hidden_txt">placeholder<br>text</p>
     </div>
 
-    <!-- contact us button ( stuck static on bottom of screen )-->
-    <a href="#">
+    <!-- update w link -->
+    <a href="javascript:void(0)">
       <button class="contact_us">
       contact us
       </button>
