--- a/index.html
+++ b/index.html
@@ -53,10 +53,37 @@ Leveraging disruptive technology to create digital growth and personalized IT so
       </tr>
     </table>
     <div id="hidden_paragraph">
-      <h2 class="hidden_txt">software header</h2><p class="hidden_txt">placeholder<br>text</p>
-      <h2 class="hidden_txt">social header</h2><p class="hidden_txt">placeholder<br>text</p>
-      <h2 class="hidden_txt">marketing header</h2><p class="hidden_txt">placeholder<br>text</p>
-      <h2 class="hidden_txt">cyber sec. header</h2><p class="hidden_txt">placeholder<br>text</p>
+      <h2 class="hidden_txt">software header</h2>
+        <p class="hidden_txt">
+          S : Survey Infrastructure<br>
+          N : Needs Analysis<br>
+          A : Action Plan<br>
+          P : Performance Review<br>
+        </p>
+
+      <h2 class="hidden_txt">social header</h2>
+        <p class="hidden_txt">
+          S : Social Audit<br>
+          N : Niche Identificiation<br>
+          A : Actionable Strategy<br>
+          P : Performance Measurement<br>
+        </p>
+
+      <h2 class="hidden_txt">marketing header</h2>
+        <p class="hidden_txt">
+          S : Situation Analysis<br>
+          N : Needs Assessment<br>
+          A : Action Plan<br>
+          P : Performance Analysis<br>
+        </p>
+
+      <h2 class="hidden_txt">cyber sec. header</h2>
+        <p class="hidden_txt">
+          S : Security Assessment<br>
+          N : Network Protection<br>
+          A : Awareness Training<br>
+          P : Proactive Monitoring<br>
+        </p>
     </div>
 
     <h2 class="bio_header" id="bio_jump">about us</h2>
