--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
       </tr>
     </table>
     <div id="hidden_paragraph">
-      <h2 class="hidden_txt">software header</h2>
+      <h2 class="hidden_txt">software consulting</h2>
         <p class="hidden_txt">
           S : Survey Infrastructure<br>
           N : Needs Analysis<br>
@@ -61,7 +61,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
           P : Performance Review<br>
         </p>
 
-      <h2 class="hidden_txt">social header</h2>
+      <h2 class="hidden_txt">social media consulting</h2>
         <p class="hidden_txt">
           S : Social Audit<br>
           N : Niche Identificiation<br>
@@ -69,7 +69,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
           P : Performance Measurement<br>
         </p>
 
-      <h2 class="hidden_txt">marketing header</h2>
+      <h2 class="hidden_txt">marketing consulting</h2>
         <p class="hidden_txt">
           S : Situation Analysis<br>
           N : Needs Assessment<br>
@@ -77,7 +77,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
           P : Performance Analysis<br>
         </p>
 
-      <h2 class="hidden_txt">cyber sec. header</h2>
+      <h2 class="hidden_txt">cyber security consulting</h2>
         <p class="hidden_txt">
           S : Security Assessment<br>
           N : Network Protection<br>
