--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
         </th>
         <th class="service_hover" onclick="show_paragraph( 2 )">
           <i class="fa-solid fa-mobile-screen-button fa-2xl service_icons"></i>
-          <p class="service_title">social</p>
+          <p class="service_title">automation</p>
         </th>
       </tr>
       <tr>
@@ -55,18 +55,18 @@ Leveraging disruptive technology to create digital growth and personalized IT so
     <div id="hidden_paragraph">
       <h2 class="hidden_txt">software consulting</h2>
         <p class="hidden_txt">
-          S : Survey Infrastructure<br>
+          S : Study Infrastructure<br>
           N : Needs Analysis<br>
           A : Action Plan<br>
-          P : Performance Review<br>
+          P : Production Review<br>
         </p>
 
-      <h2 class="hidden_txt">social media consulting</h2>
+      <h2 class="hidden_txt">automation consulting</h2>
         <p class="hidden_txt">
-          S : Social Audit<br>
-          N : Niche Identificiation<br>
-          A : Actionable Strategy<br>
-          P : Performance Measurement<br>
+          S : Survey Workflow<br>
+          N : Niche Identification<br>
+          A : Automation Implementation<br>
+          P : Performance Optimization<br>
         </p>
 
       <h2 class="hidden_txt">marketing consulting</h2>
@@ -74,7 +74,7 @@ Leveraging disruptive technology to create digital growth and personalized IT so
           S : Situation Analysis<br>
           N : Needs Assessment<br>
           A : Action Plan<br>
-          P : Performance Analysis<br>
+          P : Presentation Analysis<br>
         </p>
 
       <h2 class="hidden_txt">cyber security consulting</h2>
