--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       </ul>
     </div>
 
-    <!-- header section ( logo ? )-->
+    <!-- put into a single container -->
+    <img id="logo" src="./img/logo.png"></img>
     <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
     <p class="mission_statement">
-Leveraging disruptive technology to create digital growth and personalized IT solutions for your various business needs
+Leveraging disruptive technology to create digital growth and personalized IT solutions for your various business needs utilizing our innovative S.N.A.P. methodology.
     </p>
 
     <h2 class="service_header" id="service_jump">services</h2>
