added glowing scrolling anim

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!-- fix me 
     <div id="background_container">
-      <img src="./img/background.png" id="background"></img>
-      <div id="background_highlight"></div>
+      <div id="background"></div>
     </div>
-    -->
 
     <a href="javascript:void(0)" onclick="toggle_options( )" id="home_jump">
       <i class="fa-solid fa-backward-fast fa-fade fa-xl" id="hamburger"></i>
