--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@ Leveraging disruptive technology to create digital growth and personalized IT so
 
       <h2 class="hidden_txt">marketing consulting</h2>
         <p class="hidden_txt">
-          S : Situation Analysis<br>
-          N : Needs Assessment<br>
+          S : Social Media Assessment<br>
+          N : Narrative Generation<br>
           A : Action Plan<br>
           P : Presentation Analysis
         </p>
 
       <h2 class="hidden_txt">cyber security consulting</h2>
         <p class="hidden_txt">
-          S : Security Assessment<br>
+          S : Security Analysis<br>
           N : Network Protection<br>
           A : Awareness Training<br>
           P : Proactive Monitoring
