--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
-  <body id="home_jump">
+  <body id="home">
     <div id="background_container"><div id="background"></div></div>
 
     <div class="options">
-      <a rel="noopener" class="hover_underline_anim" href="#home_jump">Home</a>
-      <a rel="noopener" class="hover_underline_anim" href="#service_jump">Service</a>
-      <a rel="noopener" class="hover_underline_anim" href="#bio_jump">About Us</a>
+      <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
+      <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
+      <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
     </div>
 
     <!-- put into a single container -->
@@ -21,7 +21,7 @@
 Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software design, AI automation, marketing, and cyber security. Our startup is dedicated to revolutionizing businesses' approach to aritificial intelligence and empowering them to unlock the full potential of AI-driven technologies.
     </p>
 
-    <h2 class="service_header" id="service_jump">Services</h2>
+    <h2 class="service_header" id="services">Services</h2>
     <table class="service">
       <tr>
         <th class="service_hover" onclick="show_paragraph( 0 )">
@@ -78,7 +78,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
         </p>
     </div>
 
-    <h2 class="bio_header" id="bio_jump">about us</h2>
+    <h2 class="bio_header" id="about_us">about us</h2>
     <div id="bio">
       <img class="bio_img" src="./img/placeholder.webp">
       <p class="bio_txt">Demarre J.</p>
