small changes (test mobile)

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <div id="background_container"><div id="background"></div></div>
 
     <div class="options">
-      <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
-      <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
-      <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
+      <img id="logo" src="./img/logo.png"></img>
+      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <div>
+        <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
+        <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
+      </div>
     </div>
 
-    <!-- put into a single container -->
-    <img id="logo" src="./img/logo.png"></img>
-    <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
     <p class="mission_statement">
-Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software design, AI automation, marketing, and cyber security. Our startup is dedicated to revolutionizing businesses' approach to aritificial intelligence and empowering them to unlock the full potential of AI-driven technologies.
+Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software design, AI automation, marketing, and cyber security. Our startup is dedicated to revolutionizing businesses' approach to aritificial intelligence empowering them to unlock the full potential of AI-driven technologies.
     </p>
 
     <h2 class="service_header" id="services">Services</h2>
