--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
   <body id="home">
+<!-- fix top position across pc and mobile -->
     <div id="background_container"><div id="background"></div></div>
-
+    
     <div class="options">
       <img id="logo" src="./img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
@@ -17,7 +18,7 @@
         <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
       </div>
     </div>
-<!-- add custom shaping to this -->
+<!-- add custom shaping to this and fix size to contain text -->
     <div class="mission_container">
       <p class="mission_statement">
 Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software, AI automation, marketing, and cyber security. Our startup is dedicated to revolutionizing businesses' approach to AI empowering them to unlock the full potential of these new technologies.
