adding new pages for services

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img id="logo" src="./img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="./index.html">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
         <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
       </div>
@@ -59,6 +59,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
           A : Action Plan<br>
           P : Production Review
         </p>
+        <a href="./s/software.html" class="hidden_link_txt">
+          <button class="hidden_link_btn">See details</button>
+        </a>
 
       <h2 class="hidden_txt">Automation Consulting</h2>
         <p class="hidden_txt">
@@ -67,6 +70,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
           A : Automation Implementation<br>
           P : Performance Optimization
         </p>
+        <a href="./s/automation.html" class="hidden_link_txt">
+          <button class="hidden_link_btn">See details</button>
+        </a>
 
       <h2 class="hidden_txt">Marketing Consulting</h2>
         <p class="hidden_txt">
@@ -75,6 +81,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
           A : Action Plan<br>
           P : Presentation Analysis
         </p>
+        <a href="./s/marketing.html" class="hidden_link_txt">
+          <button class="hidden_link_btn">See details</button>
+        </a>
 
       <h2 class="hidden_txt">Cyber Security Consulting</h2>
         <p class="hidden_txt">
@@ -83,6 +92,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
           A : Awareness Training<br>
           P : Proactive Monitoring
         </p>
+        <a href="./s/cyber.html" class="hidden_link_txt">
+          <button class="hidden_link_btn">See details</button>
+        </a>
     </div>
 
     <div id="about_us"></div>
