almost done should be done w adding this by sunday :p

--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
       </div>
     </div>
 
-    <!-- update w link -->
     <a href="javascript:void(0)">
       <button class="contact_us">Contact Us</button>
     </a>
-    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
