--- a/s/marketing.html
+++ b/s/marketing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>snap.red</title>
-    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/base_short.css">
     <link rel="stylesheet" href="../css/static_bar.css">
     <script src="https://kit.fontawesome.com/8de8e72679.js" crossorigin="anonymous"></script>
   </head>
@@ -18,5 +18,9 @@
         <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About Us</a>
       </div>
     </div>
+
+    <!-- service description and people noted here -->
+
+    <script src="../js/short.js"></script>
   </body>
 </html>
