--- a/s/marketing.html
+++ b/s/marketing.html
@@ -19,7 +19,10 @@
       </div>
     </div>
 
-    <!-- service description and people noted here -->
+    <div class="description_container">
+      <h2>Marketing S.N.A.P.</h2>
+      <p>Marketing description</p>
+    </div>
 
     <script src="../js/short.js"></script>
   </body>
